@@ -1,3 +1,7 @@
+2009-09-11  Jaroslav Hajek  <highegg@gmail.com>
+
+	* optimization/fminunc.m: Simplify damped BFGS calculation.
+
 2009-09-09  Tatsuro Matsuoka <tmacchant@yahoo.co.jp>
 
 	* plot/gnuplot_drawnow.m: Avoid flickering windows by avoding
